# gar_proto

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  GAQL-queries.sql  __init__.py  account_constants_example.py  auth.py  consts.py  gar_requirements.txt  google-ads-template.yaml  helpers.py  main.py  prompts.py  pyproject.toml  queries.py  readme.md  requirements.txt  services.py  test.py
.github/workflows/: ci.yml  lint.yml  no-emoji.yml  tests.yml
gar/: GAQL-queries.sql  __init__.py  common.py  google-ads-template.yaml  main.py  prompts.py  queries.py  services.py
tests/: __init__.py  test_args.py  test_consts.py  test_placeholder.py
